fix: resolve broken testimonial cards layout on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -231,13 +231,13 @@ body::-webkit-scrollbar {
   }
 
   .testimonials-section {
-    @apply bg-milk relative w-full h-[120dvh];
+    @apply bg-milk relative w-full h-[120dvh] overflow-hidden;
 
     .pin-box {
-      @apply flex items-center justify-center w-full ps-52 absolute 2xl:bottom-32 bottom-[50vh];
+      @apply flex items-center justify-center w-full md:ps-52 ps-10 absolute 2xl:bottom-32 md:bottom-[20vh] bottom-[15vh];
 
       .vd-card {
-        @apply md:w-96 w-80 flex-none md:rounded-[2vw] rounded-3xl -ms-44 overflow-hidden 2xl:relative absolute border-[.5vw] border-milk;
+        @apply md:w-96 w-[60vw] flex-none md:rounded-[2vw] rounded-3xl md:-ms-44 -ms-[35vw] overflow-hidden relative border-[.5vw] border-milk shadow-xl;
       }
     }
 
